  up with the same mtime. (eg. when versioning a generated file, if you
  update the source and the generated file together, the generated file
  should appear up-to-date.)
  (John Arbash Meinel, Martin <gzlist>, #488724)

* Improve discussion of pending merges in the documentation for
  ``revert``.  (Neil Martinsen-Burrell, #505093)

Improvements
************

* Added ``add_cleanup`` and ``cleanup_now`` to ``bzrlib.command.Command``.
  All the builtin commands now use ``add_cleanup`` rather than
  ``try``/``finally`` blocks where applicable as it is simpler and more
  robust.  (Andrew Bennetts)

* Attempts to open a shared repository as a branch (e.g. ``bzr branch
  path/to/repo``) will now include "location is a repository" as a hint in
  the error message.  (Brian de Alwis, Andrew Bennetts, #440952)

* Push will now inform the user when they are trying to push to a foreign 
  VCS for which roundtripping is not supported, and will suggest them to 
  use dpush. (Jelmer Vernooij)

* The version of bzr being run is now written to the log file.
  (__monty__, #257170)

* Transport network activity indicator is shown more of the time when
  Bazaar is doing network IO.
  (Martin Pool)

Documentation
*************

* Improved help for ``bzr send``. 
  (Martin Pool, Bojan Nikolic)

* There is a System Administrator's Guide in ``doc/en/admin-guide``,
  including discussions of installation, relevant plugins, security and 
  backup. (Neil Martinsen-Burrell)

* The ``conflicts`` help topic has been renamed to ``conflict-types``.
  (Ian Clatworthy)

* The User Reference is now presented as a series of topics.
  Many of the included topics have link and format tweaks applied.
  (Ian Clatworthy)

API Changes
***********

* Many test features were renamed from ``FooFeature`` to ``foo_feature``
  to be consistent with instances being lower case and classes being
  CamelCase. For the features that were more likely to be used, we added a