@@ -3647,7 +3647,16 @@ class cmd_merge(Command):
     committed to record the result of the merge.
 
     merge refuses to run if there are any uncommitted changes, unless
-    --force is given.
+    --force is given.  The --force option can be used to create a merge
+    revision which has more than two parents.  For example, to create a
+    revision which merges two other branches, say ``../feature1a`` and 
+    ``../feature1b``::
+
+        $ bzr merge ../feature1a
+        # working tree has changes so need --force
+        $ bzr merge ../feature1b --force
+        # resolve conflicts, test, etc.
+        $ bzr commit -m 'revision with three parents'
 
     To select only some changes to merge, use "merge -i", which will prompt
     you to apply each diff hunk and file change, similar to "shelve".
